# nebula-mesh

./: Cargo.toml  README.md
.github/workflows/: build.yml
broker/: Cargo.toml
broker/src/: main.rs  pairing.rs  router.rs  session.rs
client/: Cargo.toml
client/src/: clipboard.rs  edge.rs  main.rs  protocol.rs
client/src/platform/macos/: mod.rs
client/src/platform/windows/: mod.rs
config/: layout.example.toml
docs/: macos-permissions.md  troubleshooting.md  windows-service.md
protocol/: Cargo.toml
protocol/src/: lib.rs
