[package]
name = "broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
protocol = { path = "../protocol" }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
